# Kmc-Algo

./: Dockerfile  README.md  entrypoint.sh  main.py  openenv.yaml  pyproject.toml  requirements.txt  run_astrum_local.py  service.json  train.py  train_grpo.py  visualize.py
Kmc_space/: Dockerfile  Kmc client · PY  README.md  __init__.py  app.py  client.py  config.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
Kmc_space/server/: Dockerfile  __init__.py  app.py  kmc_environment.py
Kmcalgo/: __init__.py
Kmcalgo/kmc_env/: __init__.py  config.py  env.py  models.py  openenv.yaml  policies.py  server.py
kmcAlgo-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_env.py  test_policies.py  test_server.py
